[tool.poetry]
name = "hitchmaps"
version = "0.1.0"
description = ""
authors = ["Tomas Janicek <tomasjanicek221@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^5.2.0"
passlib = { extras = ["bcrypt"], version = "^1.7.2" }
tenacity = "^8.0.1"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
emails = "^0.6.0"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^3.0.3"
psycopg2-binary = "^2.8.5"
alembic = "^1.7.5"
sqlalchemy = "^1.4.27"
python-jose = { extras = ["cryptography"], version = "^3.1.0" }

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
isort = "^5.10.1"
autoflake = "^1.3.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
pylint = "^2.11.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
