[tool.poetry]
name = "hitchmaps"
version = "0.1.0"
description = ""
authors = ["Tomas Janicek <tomasjanicek221@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# Lightway Python REST framework
fastapi = { extras = ["all"], version = "^0.70.0" }
# Backgroud task manager
celery = "^5.2.0"
# Password hashing lybraly
passlib = { extras = ["bcrypt"], version = "^1.7.2" }
# General-purpose retrying library
tenacity = "^8.0.1"
# Modern python library for email
emails = "^0.6.0"
# Python WSGI HTTP Server
gunicorn = "^20.0.4"
# PostgreSQL adapter for the Python
psycopg2 = "^2.8.5"
# Alembic is a lightweight database migration tool for usage with the SQLAlchemy
alembic = "^1.7.5"
# SQLAlchemy is the Python SQL toolkit and ORM
sqlalchemy = "^1.4.27"
# The JavaScript Object Signing and Encryption (JOSE) implementation in Python
python-jose = { extras = ["cryptography"], version = "^3.1.0" }
# Python SDK for reporting errors and exceptions as well as identifies performance issues in your application.
sentry-sdk = "^1.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
isort = "^5.10.1"
autoflake = "^1.3.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
